Lastfm: implement batch API calls creation for tag.topTags